Improve results speed